--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     
-    <title>Project Management</title>
+    <title>Manage.it</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
